--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,33 @@
 {
     "files.associations": {
+        "*.h": "c",
         "*.c": "c",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "algorithm": "cpp",
+        "array": "cpp",
+        "*.tcc": "cpp",
+        "compare": "cpp",
+        "deque": "cpp",
+        "exception": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "iosfwd": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "ostream": "cpp",
+        "queue": "cpp",
+        "stdexcept": "cpp",
+        "system_error": "cpp",
+        "cmath": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "typeinfo": "cpp",
+        "utility": "cpp",
+        "vector": "cpp"
     }
 }
